Another attempt at fixing the flash of unstyled menu, fixing the menu button being visible when opening the menu on mobile and going back to desktop size

--- a/app/assets/stylesheets/koi/components/_header.scss
+++ b/app/assets/stylesheets/koi/components/_header.scss
@@ -38,7 +38,9 @@
   }
 
   .layout-open & {
-    @include icon-block(44px, 18px);
+    @include media-query($breakpoint-header) {
+      @include icon-block(44px, 18px);
+    }
   }
 
   .layout-open & .icon-cross {
