--- a/app/assets/stylesheets/koi/components/_navigation-mobile.scss
+++ b/app/assets/stylesheets/koi/components/_navigation-mobile.scss
@@ -57,18 +57,21 @@ $navigation-secondary-pane-link-color:  #fff;
   padding: 0 $navigation-first-pane-padding;
 }
 
-.navigation-mobile.complex.ready {
-  visibility: visible;
-  .pane-wrapper {
-    will-change: transform;
-    @include transition(.15s transform linear);
+.navigation-mobile {
+  visibility: hidden;
+
+  &.ready {
+    visibility: visible;
+    .pane-wrapper {
+      will-change: transform;
+      @include transition(.15s transform linear);
+    }
   }
 }
 
 .navigation-mobile.complex {
   overflow: hidden;
   height: 100%;
-  visibility: hidden;
 
   // wrapper div that contains all our panes
   .pane-wrapper {
